--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -15,14 +15,12 @@
 # https://wiki.hyprland.org/Configuring/Monitors/
 # Configure your Display resolution, offset, scale and Monitors here, use `hyprctl monitors` to get the info.
 
-# Monitors
-
-# High Refresh Rate
-monitor=DP-2,1920x1080@180,0x0,1
-monitor=DP-1,1920x1080@144,1920x0,1
+# ---  Uncomment this and adjust it to your monitors ---
+#monitor=DP-2,1920x1080@180,0x0,1
+#monitor=DP-1,1920x1080@144,1920x0,1
 
 # High Resolution
-monitor=,highres,auto,1
+#monitor=,highres,auto,1
 
 # NOTE: for laptop, kindly check notes in Laptops.conf regarding display
 # Created this inorder for the monitor display to not wake up if not intended.
