--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -59,8 +59,8 @@ workspace = 3, monitor:DP-1
 source= $HOME/.config/hypr/monitors.conf
 source= $HOME/.config/hypr/workspaces.conf
 
-env = GTK_CURSOR_THEME=Windows
-env = XCURSOR_THEME,windows
+env = GTK_CURSOR_THEME=windows-cursor
+env = XCURSOR_THEME,windows-cursor
 env = XCURSOR_SIZE,24
 
 # Media Controls with arrow keys
