--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,9 +16,11 @@ env = NVD_BACKEND,direct
 #workspace = 1
 #exec-once = hyprctl dispatch workspace 1
 exec-once = sleep 0.2 && hyprctl dispatch workspace 1
-exec-once = sh -c "wine /home/zap/Pulse.exe"
 #exec-once = export QT_QPA_PLATFORMTHEME=qt5ct                         
 #exec-once = export QT_QPA_PLATFORMTHEME=qt6ct
+windowrule = opacity 2, title:(.*)(Sober)$
+windowrule = opacity 2, title:(.*)(Spotify)$
+
 
 # Sourcing external config files
 $configs = $HOME/.config/hypr/configs # Default Configs directory path
