--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -7,7 +7,7 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 $wallDIR=$HOME/Pictures/wallpapers
 $lock = $scriptsDir/LockScreen.sh
 $SwwwRandom = $UserScripts/WallpaperAutoChange.sh
-$livewallpaper="$HOME/Pictures/wallpapers/Charming Cafe.mp4"
+$livewallpaper="$HOME/Pictures/wallpapers/Super Mario.mp4"
 
 # wallpaper stuff 
 exec-once = hyprctl dispatch exec "[workspace 2] vesktop"
