--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,6 +20,7 @@ exec-once = sleep 0.2 && hyprctl dispatch workspace 1
 #exec-once = export QT_QPA_PLATFORMTHEME=qt6ct
 windowrule = opacity 2, title:(.*)(Sober)$
 windowrule = opacity 2, title:(.*)(Spotify)$
+windowrule = opacity 2, title:(.*)(Brave)$
 
 
 # Sourcing external config files
