--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,6 +21,7 @@ exec-once = sleep 0.2 && hyprctl dispatch workspace 1
 windowrule = opacity 2, title:(.*)(Sober)$
 windowrule = opacity 2, title:(.*)(Spotify)$
 windowrule = opacity 2, title:(.*)(Brave)$
+windowrule = opacity 2, class:^(Minecraft.*)$
 
 
 # Sourcing external config files
