--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -27,6 +27,7 @@ bind = $mainMod, I, layoutmsg, addmaster
 bind = $mainMod, J, layoutmsg, cyclenext
 bind = $mainMod, K, layoutmsg, cycleprev
 bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster
+bind = $mainMod , D, exec, ~/.config/hypr/scripts/Minimize.sh
 
 # Dwindle Layout
 bind = $mainMod SHIFT, I, togglesplit # only works on dwindle layout
@@ -41,8 +42,8 @@ bind = $mainMod, G, togglegroup # toggle group
 bind = $mainMod CTRL, tab, changegroupactive  # change focus to another window
 
  # Cycle windows if floating bring to top
-bind = ALT, tab, cyclenext
-bind = ALT, tab, bringactivetotop  
+#bind = ALT, tab, cyclenext
+#bind = ALT, tab, bringactivetotop  
 
 # Special Keys / Hot Keys
 bindel = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc # volume up
