--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -70,3 +70,26 @@ env = XCURSOR_SIZE,24
 # Media Controls with arrow keys
 # bind = $mainMod, right, exec, playerctl next
 # bind = $mainMod, left, exec, playerctl previous
+
+exec-once = foot --server
+
+bind = ALT, TAB, exec, $HOME/.config/hypr/scripts/alttab/enable.sh 'down'
+bind = ALT SHIFT, TAB, exec, $HOME/.config/hypr/scripts/alttab/enable.sh 'up'
+
+submap=alttab
+bind = ALT, tab, sendshortcut, , tab, class:alttab
+bind = ALT SHIFT, tab, sendshortcut, shift, tab, class:alttab
+
+bindrt = ALT, ALT_L, exec, $XDG_CONFIG_HOME/hypr/scripts/alttab/disable.sh ; hyprctl -q dispatch sendshortcut , return,class:alttab
+bindrt = ALT SHIFT, ALT_L, exec, $XDG_CONFIG_HOME/hypr/scripts/alttab/disable.sh ; hyprctl -q dispatch sendshortcut , return,class:alttab
+bind = ALT, Return, exec, $XDG_CONFIG_HOME/hypr/scripts/alttab/disable.sh ; hyprctl -q dispatch sendshortcut , return, class:alttab
+bind = ALT SHIFT, Return, exec, $XDG_CONFIG_HOME/hypr/scripts/alttab/disable.sh ; hyprctl -q dispatch sendshortcut , return, class:alttab
+bind = ALT, escape, exec, $XDG_CONFIG_HOME/hypr/scripts/alttab/disable.sh ; hyprctl -q dispatch sendshortcut , escape,class:alttab
+bind = ALT SHIFT, escape, exec, $XDG_CONFIG_HOME/hypr/scripts/alttab/disable.sh ; hyprctl -q dispatch sendshortcut , escape,class:alttab
+submap = reset
+
+workspace = special:alttab, gapsout:0, gapsin:0, bordersize:0
+windowrule = noanim, class:alttab
+windowrule = stayfocused, class:alttab
+windowrule = workspace special:alttab, class:alttab
+windowrule = bordersize 0, class:alttab
