--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -64,7 +64,7 @@ source= $HOME/.config/hypr/monitors.conf
 source= $HOME/.config/hypr/workspaces.conf
 
 env = GTK_CURSOR_THEME=Windows
-env = XCURSOR_THEME,windows
+env = XCURSOR_THEME,windows-cursor
 env = XCURSOR_SIZE,24
 
 # Media Controls with arrow keys
