--- a/.config/hypr/UserConfigs/01-UserDefaults.conf
+++ b/.config/hypr/UserConfigs/01-UserDefaults.conf
@@ -4,7 +4,7 @@
 
 # Set your default editor here uncomment and reboot to take effect.
 # NOTE, this will be automatically uncommented if you select neovim or vim to your default editor
-#env = EDITOR,vim #default editor
+env = EDITOR,vim #default editor
 
 # Define preferred text editor for the KooL Quick Settings Menu (SUPER SHIFT E)
 # script will take the default EDITOR and nano as fallback
