--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -91,6 +91,7 @@ bind = $mainMod ALT, up, swapwindow, u
 bind = $mainMod ALT, down, swapwindow, d
 
 # Move focus with mainMod + arrow keys
+bind = $mainMod, tab, cyclenext
 # bind = $mainMod, left, movefocus, l
 # bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
@@ -101,8 +102,8 @@ bind = $mainMod, DOWN,  exec, playerctl -p spotify play-pause
 bind = $mainMod, T, exec, kitty
 
 # Workspaces related
-bind = $mainMod, tab, workspace, m+1
-bind = $mainMod SHIFT, tab, workspace, m-1
+#bind = $mainMod, tab, workspace, m+1
+#bind = $mainMod SHIFT, tab, workspace, m-1
 
 # Special workspace
 bind = $mainMod SHIFT, U, movetoworkspace, special
