--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,10 +2,6 @@
 # always refer to Hyprland wiki
 # https://wiki.hyprland.org/
 
-
-
-
-exec-once = swayidle -w timeout 120 'hyprlock' before-sleep 'hyprlock' 
 source = colors.conf
 #blurls = waybar layerrule = blur,waybar
 # Initial boot script enable to apply initial wallpapers, theming, new settings etc.
@@ -19,16 +15,14 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 env = NVD_BACKEND,direct
 #workspace = 1
 #exec-once = hyprctl dispatch workspace 1
-exec-once = hyprctl dispatch workspace 1
+exec-once = sleep 0.2 && hyprctl dispatch workspace 1
 #exec-once = export QT_QPA_PLATFORMTHEME=qt5ct                         
 #exec-once = export QT_QPA_PLATFORMTHEME=qt6ct
 windowrule = opacity 2, title:(.*)(Sober)$
 windowrule = opacity 2, title:(.*)(Spotify)$
 windowrule = opacity 2, title:(.*)(Brave)$
 windowrule = opacity 2, class:^(Minecraft.*)$
-#windowrule = noblur,class:^(kitty)$
-windowrule = opacity 2, title:(.*)(LM Studio)$
-windowrule = opacity 1.1, class:(.*)(app.zen_browser.zen)$
+
 
 # Sourcing external config files
 $configs = $HOME/.config/hypr/configs # Default Configs directory path
@@ -70,7 +64,7 @@ source= $HOME/.config/hypr/monitors.conf
 source= $HOME/.config/hypr/workspaces.conf
 
 env = GTK_CURSOR_THEME=Windows
-env = XCURSOR_THEME,windows
+env = XCURSOR_THEME,windows-cursor
 env = XCURSOR_SIZE,24
 
 # Media Controls with arrow keys
