--- a/.config/matugen/config.toml
+++ b/.config/matugen/config.toml
@@ -1,12 +1,12 @@
 [config]
 
 [templates.hyprland]
-input_path = '/home/zap/.config/matugen/templates/hyprland-colors.conf'
+input_path = '~/.config/matugen/templates/hyprland-colors.conf'
 output_path = '~/.config/hypr/colors.conf'
 post_hook = 'hyprctl reload'
 
 [templates.kitty]
-input_path = '/home/zap/.config/matugen/templates/kitty-colors.conf'
+input_path = '~/.config/matugen/templates/kitty-colors.conf'
 output_path = '~/.config/kitty/colors.conf'
 post_hook = 'pkill -SIGUSR1 kitty'
 
@@ -15,8 +15,8 @@ input_path = '~/.config/matugen/templates/cava-colors.ini'
 output_path = '~/.config/cava/themes/matugen'
 
 [templates.waybar]
-input_path = '/home/zap/.config/matugen/templates/colors.css'
-output_path = '/home/zap/.config/waybar/colors.css'
+input_path = '~/.config/matugen/templates/colors.css'
+output_path = '~/.config/waybar/colors.css'
 
 [templates.gtk3]
 input_path = '~/.config/matugen/templates/gtk-colors.css'
